--- a/TravelRevewApp/Views/Reviews/Index.cshtml
+++ b/TravelRevewApp/Views/Reviews/Index.cshtml
@@ -3,12 +3,64 @@
 @{
     ViewBag.Title = "Index";
 }
+<div class="row">
+    <div class="col-md-12">
+        <h2>Index</h2>
+    </div>
+</div>
 
-<h2>Index</h2>
+<div class="row">
+    <div class="col-md-12">
+        <p>
+            @Html.ActionLink("Create New", "Create")
+        </p>
+    </div>
+</div>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
+<div class="row reviews-index">
+    <div class="container" id="review-index">
+        <div id="myCarousel" class="carousel side" data-ride="carousel">
+            <!-- Indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#myCarousel" class="active"></li>
+                @foreach (var item in Model)
+        {
+            <li data-target="#myCarousel"></li>
+}
+            </ol>
+            <!-- Wrapper for sides -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <p>
+                        @Html.ActionLink("Create New", "Create")
+                    </p>
+                </div>
+                @foreach (var item in Model)
+        {
+            <div class="item">
+                <div class="caption" id="movie-index">
+                    <h3>@Html.DisplayNameFor(model => model.Category.Type) : @Html.DisplayFor(modelItem => item.Category.Type)</h3>
+                    <p>@Html.DisplayNameFor(model => model.Name) : @Html.DisplayFor(modelItem => item.Name)</p>
+                    <p>@Html.DisplayNameFor(model => model.Rating) :  @Html.DisplayNameFor(model => model.Rating)</p>
+                    <p>@Html.ActionLink("Details", "Details", new { id = item.ReviewID })</p>
+                </div>
+            </div>
+}
+            </div>
+            <!-- Left and right controls-->
+            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span>
+            </a>
+        </div>
+    </div>
+</div>
+
+
 <table class="table">
     <tr>
         <th>
