--- a/TravelRevewApp/Content/Site.css
+++ b/TravelRevewApp/Content/Site.css
@@ -37,7 +37,7 @@ div.jumbotron {
 }
 
 h1#main-index {
-    color: #000000;
+    color: #ffffff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
     font-style: italic;
@@ -50,20 +50,39 @@ h2#main-index {
     font-weight: bold;
     text-align: center;
 }
-
-div#main-index-thumbnail {
-    background-color: #000099;
-    background-position: center center;
-    background-size: contain;
-    text-align: center;
-    color: #a3ff00;
+p#main-index {
+    font-weight:bold;
+    color: #ffffff;
 }
 
-/*div#directors.thumbnail {
-    background-color: #000099;
+div.thumbnail.main-index {
+    background-image: linear-gradient(to right bottom, #a8eb12, #00c376, #008fa0, #00578e, #06224e);
     background-position: center center;
     background-size: contain;
     text-align: center;
-    color: #a3ff00;
-}*/
-   
+    color: #ffffff;
+}
+
+/*carousel*/
+div.carousel-inner {
+    width: 100%;
+    height: 350px;
+    background-color: white;
+    background-image: url('../images/reviews_index/My Post.jpg');
+    background-position: center center;
+    background-size: contain;
+    text-align: center;
+    color: white;
+}
+
+div#travel-index.caption-transbox {
+    display: flex;
+    height:auto;
+    flex-direction: column;
+    color:#000000;
+    margin: 40px;
+    background-color: #f2f2f2;
+    border: 2px solid black;
+    opacity: 0.6;
+    filter: alpha(opacity=60); /*transform IE8 and earlier*/
+}
