--- a/TravelRevewApp/Views/Home/Index.cshtml
+++ b/TravelRevewApp/Views/Home/Index.cshtml
@@ -4,18 +4,24 @@
 
 
 <div class="row">
-    <div class="jumbotron">
-        <h1 id="main-index">Travel Review</h1>
-        <h2 id="main-index">Life's an Adventure ... Travel</h2>
-        <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <div class="col">
+      
+            <div class="jumbotron">
+
+                <h1 id="main-index">Emmalani's Travel Review</h1>
+                <h2 id="main-index">Life's an Adventure ... Travel</h2>
+                <p id="main-index">Puppy kitty ipsum dolor sit good dog foot stick canary. Teeth Mittens grooming vaccine walk swimming nest good boy furry tongue heel furry treats fish. Cage run fast kitten dinnertime ball run foot park fleas throw house train licks stick dinnertime window. </p>
+
+            </div>
+        
+        
     </div>
-</div>
 
 
 <div class="row">
     <div class="col-md-6">
-        <div class="thumbnail" id="main-index">
-            <img src="~/images/home_index/DSCN0440.JPG" class="img-thumbnail" alt="Thumb1" width="360" height="147"  />
+        <div class="thumbnail main-index">
+            <img src="~/images/home_index/DSCN0440.JPG" class="img-thumbnail" alt="Thumb1" width="360" height="147" />
             @*<img src="~/images/Main_Index/admission-2974645_1920.jpg" class="img-thumbnail" alt="Thumb1" width="360" height="147" />*@
             <h2>Reviews</h2>
             <p>See a List of Reviews.</p>
@@ -23,7 +29,7 @@
         </div>
     </div>
     <div class="col-md-6">
-        <div class="thumbnail" id="main-index">
+        <div class="thumbnail main-index">
             <img src="~/images/home_index/Mix 022.jpg" class="img-thumbnail" alt="Thumb2" width="360" height="147" />
             @*<img src="~/images/Main_Index/rsz_clapper-board-152088_1280.png" class="img-thumbnail" alt="Thumb2" width="360" height="147" />*@
             <h2>Categories</h2>
