--- a/TravelRevewApp/Views/Reviews/Index.cshtml
+++ b/TravelRevewApp/Views/Reviews/Index.cshtml
@@ -38,9 +38,9 @@
                 @foreach (var item in Model)
         {
             <div class="item">
-                <div class="caption" id="movie-index">
-                    <h3>@Html.DisplayNameFor(model => model.Category.Type) : @Html.DisplayFor(modelItem => item.Category.Type)</h3>
-                    <p>@Html.DisplayNameFor(model => model.Name) : @Html.DisplayFor(modelItem => item.Name)</p>
+                <div class="caption" id="travel-index">
+                    <h3>@Html.DisplayNameFor(model => model.Name) : @Html.DisplayFor(modelItem => item.Name)</h3>
+                    <p>@Html.DisplayNameFor(model => model.Category.Type) : @Html.DisplayFor(modelItem => item.Category.Type)</p>
                     <p>@Html.DisplayNameFor(model => model.Rating) :  @Html.DisplayNameFor(model => model.Rating)</p>
                     <p>@Html.ActionLink("Details", "Details", new { id = item.ReviewID })</p>
                 </div>
@@ -61,61 +61,3 @@
 </div>
 
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Category.Type)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Name)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Arrive)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Depart)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Sunny)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Rating)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Comments)
-        </th>
-        <th></th>
-    </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Category.Type)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Arrive)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Depart)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Sunny)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rating)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comments)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ReviewID }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ReviewID }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ReviewID })
-        </td>
-    </tr>
-}
-
-</table>
