--- a/TravelRevewApp/Views/Reviews/Index.cshtml
+++ b/TravelRevewApp/Views/Reviews/Index.cshtml
@@ -38,7 +38,7 @@
                 @foreach (var item in Model)
         {
             <div class="item">
-                <div class="caption" id="travel-index">
+                <div class="caption-transbox" id="travel-index">
                     <h3>@Html.DisplayNameFor(model => model.Name) : @Html.DisplayFor(modelItem => item.Name)</h3>
                     <p>@Html.DisplayNameFor(model => model.Category.Type) : @Html.DisplayFor(modelItem => item.Category.Type)</p>
                     <p>@Html.DisplayNameFor(model => model.Rating) :  @Html.DisplayNameFor(model => model.Rating)</p>
