--- a/TravelRevewApp/Views/Shared/_Layout.cshtml
+++ b/TravelRevewApp/Views/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Travel Review</p>
+            <p>&copy; @DateTime.Now.Year - Emmalani's Travel Review</p>
         </footer>
     </div>
 
