--- a/TravelRevewApp/Content/Site.css
+++ b/TravelRevewApp/Content/Site.css
@@ -23,14 +23,22 @@ textarea {
     max-width: 280px;
 }
 
-/** Home Page navbar*/
+/* navbar */
 
-div.navbar-collapse.collapse {
-    color: red;
-    width: 100%;
-    height: 5px;
+div.navbar.navbar-inverse.navbar-fixed-top {
+    background-image: linear-gradient(to right bottom, #a8eb12, #00c376, #008fa0, #00578e, #06224e);
 }
 
+.navbar-inverse .navbar-brand {
+    color:#000000;
+}
+
+.navbar-inverse .navbar-nav > li > a {
+    color:#000000;
+}
+
+
+/* Homepage */
 div.jumbotron {
     background-image: url('../images/home_index/ClevelandSkyLine.jpg');
     background-size: contain;
@@ -63,6 +71,12 @@ div.thumbnail.main-index {
     color: #ffffff;
 }
 
+/* Reviews*/
+div.row.review-index {
+    text-align:center;
+    font-weight:bold;
+}
+
 /*carousel*/
 div.carousel-inner {
     width: 100%;
@@ -77,12 +91,14 @@ div.carousel-inner {
 
 div#travel-index.caption-transbox {
     display: flex;
-    height:auto;
+    height:290px;
     flex-direction: column;
     color:#000000;
-    margin: 40px;
+    margin: 30px;
+    padding-top: 30px;
     background-color: #f2f2f2;
     border: 2px solid black;
     opacity: 0.6;
     filter: alpha(opacity=60); /*transform IE8 and earlier*/
+    font-weight:bold;
 }
