--- a/TravelRevewApp/Views/Reviews/Details.cshtml
+++ b/TravelRevewApp/Views/Reviews/Details.cshtml
@@ -9,7 +9,7 @@
     </div>
 </div>
 
-<div class="row">
+<div class="row details-index">
     <div class="col-md-8">
         <p>
             @Html.DisplayNameFor(model => model.Name) :  @Html.DisplayFor(model => model.Name)
