Styled details page

--- a/TravelRevewApp/Views/Home/Index.cshtml
+++ b/TravelRevewApp/Views/Home/Index.cshtml
@@ -5,18 +5,13 @@
 
 <div class="row">
     <div class="col">
-      
-            <div class="jumbotron">
-
-                <h1 id="main-index">Emmalani's Travel Review</h1>
+            <div class="jumbotron main-index">
+                <h1 id="main-index">Emmalani's Hawai`i Travel Review</h1>
                 <h2 id="main-index">Life's an Adventure ... Travel</h2>
                 <p id="main-index">Puppy kitty ipsum dolor sit good dog foot stick canary. Teeth Mittens grooming vaccine walk swimming nest good boy furry tongue heel furry treats fish. Cage run fast kitten dinnertime ball run foot park fleas throw house train licks stick dinnertime window. </p>
-
             </div>
-        
-        
     </div>
-
+</div>
 
 <div class="row">
     <div class="col-md-6">
