--- a/TravelRevewApp/Content/Site.css
+++ b/TravelRevewApp/Content/Site.css
@@ -40,12 +40,13 @@ div.navbar.navbar-inverse.navbar-fixed-top {
 
 
 /* Homepage */
-div.jumbotron {
+div.jumbotron.main-index {
     background-image: url('../images/home_index/ClevelandSkyLine.jpg');
     background-size: contain;
 }
 
 h1#main-index {
+    font-size:4.5vw;
     color: #ffffff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
@@ -54,12 +55,14 @@ h1#main-index {
 }
 
 h2#main-index {
-    color: #000000;
+    font-size:3vw;
+    color: #ffffff;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     font-weight: bold;
     text-align: center;
 }
 p#main-index {
+    font-size:1.5vw;
     font-weight:bold;
     color: #ffffff;
 }
@@ -72,47 +75,120 @@ div.thumbnail.main-index {
     color: #ffffff;
 }
 
-/* Reviews*/
-div.row.review-index {
+h2 {
+    font-size:2.5vw;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align:center;
-    font-weight:bold;
+    color:#ffffff;
 }
 
-/*carousel*/
-div.carousel-inner {
-    width: 100%;
-    height: 350px;
-    background-color: white;
+h3 {
+    font-size:2vw;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color:#ffffff;
+}
+
+p {
+    font-size: 1.25vw;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    color:#ffffff;
+}
+
+/* Reviews*/
+
+h2.index {
+    text-align:center;
+}
+
+p.index{
+    text-align:center;
+}
+
+div.jumbotron.review-index {
     background-image: url('../images/reviews_index/My Post.jpg');
+    height:40vh;
+    background-position: center center;
+    background-size: contain;
+}
+
+div.thumbnail.review-index {
+    background-image: linear-gradient(to right bottom, #a8eb12, #00c376, #008fa0, #00578e, #06224e);
     background-position: center center;
     background-size: contain;
     text-align: center;
-    color: white;
+    color: #ffffff;
 }
 
-div#travel-index.caption-transbox {
-    display: flex;
-    height:290px;
-    flex-direction: column;
-    color:#000000;
-    margin: 30px;
-    padding-top: 30px;
-    background-color: #f2f2f2;
-    border: 2px solid black;
-    opacity: 0.6;
-    filter: alpha(opacity=60); /*transform IE8 and earlier*/
-    font-weight:bold;
-}
 
 /* details page*/
-div.details-index {
-    background-image: url('../images/reviews_details/clouds.jpg');
-    height:400px;
-    margin-top: 5%;
+
+div.thumbnail.details-index {
+    background-image: linear-gradient(to right bottom, #a8eb12, #00c376, #008fa0, #00578e, #06224e);
     background-position: center center;
     background-size: contain;
+    text-align: center;
+    color: #ffffff;
 }
 
-div.row.details-index {
-    padding-left:40%
+
+
+@import url(//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css);
+
+fieldset, label {
+    margin: 0;
+    padding: 0;
 }
+
+body {
+    margin: 20px;
+}
+
+h1 {
+    font-size: 1.5em;
+    margin: 10px;
+}
+
+/****** Style Star Rating Widget *****/
+
+.rating {
+    border: none;
+    float: left;
+}
+
+    .rating > input {
+        display: none;
+    }
+
+    .rating > label:before {
+        margin: 5px;
+        font-size: 1.25em;
+        font-family: FontAwesome;
+        display: inline-block;
+        content: "\f005";
+    }
+
+    .rating > .half:before {
+        content: "\f089";
+        position: absolute;
+    }
+
+    .rating > label {
+        color: #ddd;
+        float: right;
+    }
+
+    /***** CSS Magic to Highlight Stars on Hover *****/
+
+    .rating > input:checked ~ label, /* show gold star when clicked */
+    .rating:not(:checked) > label:hover, /* hover current star */
+    .rating:not(:checked) > label:hover ~ label {
+        color: #FFD700;
+    }
+        /* hover previous stars in list */
+
+        .rating > input:checked + label:hover, /* hover current star when changing rating */
+        .rating > input:checked ~ label:hover,
+        .rating > label:hover ~ input:checked ~ label, /* lighten current selection */
+        .rating > input:checked ~ label:hover ~ label {
+            color: #FFED85;
+        } 
