--- a/TravelRevewApp/Views/Reviews/Index.cshtml
+++ b/TravelRevewApp/Views/Reviews/Index.cshtml
@@ -3,64 +3,40 @@
 @{
     ViewBag.Title = "Index";
 }
-<div class="row review-index">
-    <div class="col-md-12">
-        <h2>
+<div class="row index">
+    <div class="col-sm-4 col-md-4"></div>
+    <div class="col-sm-4 col-md-4">
+        <h2 class="review-index">
             Your Opinion Count
         </h2>
-        <p>
+        <p class="index">
             @Html.ActionLink("Create New", "Create")
         </p>
     </div>
+    <div class="col-sm-4 col-md-4"></div>
 </div>
 
-<div class="row reviews-index">
-    <div class="container" id="review-index">
-        <div id="myCarousel" class="carousel side" data-ride="carousel">
-            <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#myCarousel" class="active"></li>
-                @foreach (var item in Model)
-                {
-                     <li data-target="#myCarousel"></li>
-                }
-            </ol>
-            <!-- Wrapper for sides -->
-            <div class="carousel-inner">
-                <div class="item active">
-                    <div class="caption-transbox" id="travel-index">
-                        <h2>
-                            Create A New Review
-                        </h2>
-                        <p>
-                            @Html.ActionLink("Create New", "Create")
-                        </p>
-                    </div>
-                    
-                </div>
-                @foreach (var item in Model)
-                {
-                <div class="item">
-                    <div class="caption-transbox" id="travel-index">
-                        <h2>@Html.DisplayNameFor(model => model.Name) : @Html.DisplayFor(modelItem => item.Name)</h2>
-                        <h3>@Html.DisplayNameFor(model => model.Category.Type) : @Html.DisplayFor(modelItem => item.Category.Type)</h3>
-                        <h3>@Html.DisplayNameFor(model => model.Rating) : @Html.DisplayFor(modelItem => item.Rating)</h3>
-                        <h3>@Html.ActionLink("Details", "Details", new { id = item.ReviewID })</h3>
-                    </div>
-                </div>
-                }
-            </div>
-            <!-- Left and right controls-->
-            <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right"></span>
-                <span class="sr-only">Next</span>
-            </a>
+<div class="row">
+    <div class="col">
+        <div class="jumbotron review-index">
         </div>
     </div>
+</div>
+
+<div class="row review-index">
+    @foreach (var item in Model)
+    {
+        <div class="col-sm-4 col-md-4">
+            <div class="thumbnail review-index">
+                <div class="caption">
+                    <h2>@*@Html.DisplayNameFor(model => model.Name) :*@ @Html.DisplayFor(modelItem => item.Name)</h2>
+                    <h3>@*@Html.DisplayNameFor(model => model.Category.Type) :*@ @Html.DisplayFor(modelItem => item.Category.Type)</h3>
+                    <h3>@Html.DisplayNameFor(model => model.Rating) : @Html.DisplayFor(modelItem => item.Rating)</h3>
+                    <h3>@Html.ActionLink("Details", "Details", new { id = item.ReviewID })</h3>
+                </div>
+            </div>
+        </div>
+    }
 </div>
 
 
